fixed overlapping category links when wrapped

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -230,6 +230,7 @@ details[open] summary {
 
 .category-link {
 	position: relative;
+	display: inline-block;
 	background-color: var(--green800);
 	border: none;
 	padding: calc(0.25 * var(--size700, 1rem)) calc(0.5 * var(--size700, 1rem));
